# ic-dev-kit

./: .eslintrc.js  .gitignore  .gitpod.yml  .releaserc.json  CLAUDE.md  GitVersion.yml  README.md  package-lock.json  package.json  sh_post_container_created.sh  tsconfig.cjs.json  tsconfig.json  vite.config.js  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-drafter.yml
.github/workflows/: build.yml  publish.yml  release-drafter.yml
bins/: ic-build-all.js  ic-generate.js  ic-init-identity.js  ic-init.js  ic-pack.js  ic-show-principal.js  ic-update-did.js
example/: Cargo.toml  canister_ids.json  dfx.json  dfx_package.json  ic-dev-kit.json  package.json  rust-toolchain.toml  sh_pack.sh  sh_run.sh  start.sh  update_kit.sh
example/canisters/one_way_hoster/: Cargo.toml
example/canisters/one_way_hoster/src/: actor.rs  one_way_hoster.did
ic_npm_templates/npm_server/: package.json
ic_npm_templates/npm_ts_client/: index.ts  package.json
lib/bin_scripts/: ic-build-all.js  ic-generate.js  ic-init-identity.js  ic-pack.js  ic-update-did.js
lib/src/: ICDevKitConfiguration.d.ts  ICDevKitConfiguration.js  canister.d.ts  canister.js  dfxJson.d.ts  dfxJson.js  identity.d.ts  identity.js  index.d.ts  setup.js  types.d.ts  unit.d.ts  unit.js  utils.d.ts  utils.js
src/: entrypoint.js  ic.ts  icdev.ts
src/bin_scripts/: ic-build-all.ts  ic-generate.ts  ic-get-account-id.ts  ic-init-identity.ts  ic-init.ts  ic-install-canister.ts  ic-pack.ts  ic-show-principal.ts  ic-update-did.ts  utls.ts
src/bins/: createPackage.ts  create_package.ts  (+12 more)
(+25 files in other folders)
